# ruff_prebuilt

./: .bazelrc  .gitignore  BUILD.bazel  LICENSE-MIT  MODULE.bazel  README.md  extensions.bzl  rules.bzl  toolchains.bzl  versions.json
.bcr/: metadata.template.json  source.template.json
.github/: renovate.json
.github/workflows/: continuous_integration.yml  publish.yaml
example/: BUILD.bazel  MODULE.bazel
workflows/: .ruff.toml  BUILD.bazel  README.md  module_version.bzl  release.py  stamp.sh  versions.py
