# SPDX-License-Identifier: MIT

load("//:rules.bzl", "ruff_binary")

package(default_visibility = ["//visibility:public"])

ruff_binary(name = "ruff")

toolchain_type(name = "toolchain_type")

filegroup(
    name = "readme",
    srcs = ["README.md"],
)

filegroup(
    name = "versions",
    srcs = ["versions.json"],
)

filegroup(
    name = "source_archive_contents",
    srcs = glob(
        [
            "LICENSE*",
            "*.bazel",
            "*.bzl",
            "*.json",
        ],
        allow_empty = False,
    ),
)
